Support keyword splatting nil

nil is treated similar to the empty hash in this case, passing
no keywords and not calling any conversion methods.

Fixes [Bug #20064]