test/ruby/test_backtrace.rb
@@ -378,7 +378,7 @@ class TestBacktrace < Test::Unit::TestCase
 
   def test_core_backtrace_hash_merge
     e = assert_raise(TypeError) do
-      {**nil}
+      {**1}
     end
     assert_not_match(/\Acore#/, e.backtrace_locations[0].base_label)
   end
